# toxic-filter

./: .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.remote  README.md  app.py  example_prediction.py  pyproject.toml  requirements-server.txt  requirements.txt
.github/workflows/: deploy-cloud-run.yml  google-cloudrun-docker.yml
monitoring/: cloud_run_dashboard.json
scripts/: deploy_cloud_run.sh  fetch_model.sh  gcs_model_publish.sh  setup_wif_github_oidc.sh  smoke_test.sh
